<resources>
    <string name="app_name">Control DC Motor</string>
    <string name="app_logo">Application Logo</string>

    <!-- Splash Screen -->
    <string name="university_name_ar">جامعة هواري بومدين للعلوم والتكنولوجيا</string>
    <string name="university_name">Houari Boumediene University of Science and Technology\nUSTHB</string>
    <string name="faculty_name">Faculty of Electric engineering</string>
    <string name="project_title">DC Motor Control System</string>
    <string name="project_description">A mobile application for controlling DC motors via Bluetooth</string>
    <string name="student_1">Azzouni Nourane</string>
    <string name="student_2">Hoceine Chaima</string>
    <string name="professor_name">Mr. Dahman</string>
    <string name="project_date">May 2025</string>
    <string name="left_logo_desc">University Logo</string>
    <string name="right_logo_desc">Faculty Logo</string>

    <!-- Bluetooth -->
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="bluetooth_scanning">Scanning…</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_enable">Enable Bluetooth</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="bluetooth_location_required">Location permission required for Bluetooth scanning</string>

    <!-- Control Panel -->
    <string name="control_panel">Control Panel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="direction">Direction</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="speed">Speed</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="message_format">Message Format</string>
    <string name="custom_logo">Custom Logo</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="save_settings">Save Settings</string>
    <string name="reset_settings">Reset Settings</string>

    <!-- Test Page -->
    <string name="test">Test</string>
    <string name="send_command">Send Command</string>
    <string name="command_hint">Enter command</string>
    <string name="received_data">Received Data</string>
    <string name="clear">Clear</string>

    <!-- Error Messages -->
    <string name="error_bluetooth_connection">Error connecting to device</string>
    <string name="error_bluetooth_communication">Communication error</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="no_devices_found">No devices found</string>
    <string name="zero">0</string>
    <string name="response_time_chart">Response Time Chart</string>
    <string name="this_chart_shows_the_response_time_between_commands_and_device_responses">This chart shows the response time between commands and device responses.</string>
    <string name="powered_by_hichemtab_tech">Powered by HichemTab-tech</string>
</resources>
