<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    tools:context=".SplashActivity">

    <!-- University Name at the top -->
    <TextView
            android:id="@+id/tvUniversityName_ar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/university_name_ar"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLeftLogo"
            app:layout_constraintEnd_toStartOf="@+id/ivRightLogo"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tvUniversityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/university_name"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvUniversityName_ar"
            app:layout_constraintStart_toEndOf="@+id/ivLeftLogo"
            app:layout_constraintEnd_toStartOf="@+id/ivRightLogo"
            app:layout_constraintEnd_toEndOf="parent" />

    <!-- Faculty Name below University Name -->

    <!-- Left Logo (University) -->
    <TextView
            android:id="@+id/tvFacultyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/faculty_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUniversityName"
            app:layout_constraintStart_toEndOf="@+id/ivLeftLogo"
            app:layout_constraintEnd_toStartOf="@+id/ivRightLogo"
            app:layout_constraintHorizontal_bias="0.526" />

    <ImageView
        android:id="@+id/ivLeftLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/left_logo_desc"
        android:src="@drawable/logo_usthb"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Right Logo (Faculty) -->
    <ImageView
        android:id="@+id/ivRightLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/right_logo_desc"
        android:src="@drawable/logo_usthb"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Project Title in the center -->
    <TextView
        android:id="@+id/tvProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_title"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <!-- Project Description -->
    <TextView
        android:id="@+id/tvProjectDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Student Names -->
    <TextView
        android:id="@+id/tvStudentNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvStudentNames2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentNames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Professor Name -->
    <TextView
        android:id="@+id/tvProfessorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professor_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentNames2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Date -->
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProfessorName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- "Powered by HichemTab" Text -->
    <TextView
        android:id="@+id/tvPoweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/powered_by_hichemtab_tech"
        android:textColor="@color/teal_700"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
